# design_patterns_python

./: .gitignore  README.md  main.py  pyproject.toml
behavioral/observer/: ConcreteObserverA.py  ConcreteObserverB.py  ConcreteSubject.py  Observer.py  Subject.py  interfaces.py  main.py
behavioral/strategy/: ConcreteStrategyA.py  ConcreteStrategyB.py  context.py  main.py  strategy.py
creational/: __init__.py
creational/Prototype/: SelfReferencingEntity.py  SomeComponent.py  main.py
creational/factory_method/: ConcreteCreator1.py  ConcreteCreator2.py  ConcreteProduct1.py  ConcreteProduct2.py  Creator.py  Product.py  main.py
creational/singleton/: main.py
creational/singleton/singleton_monothread/: Singleton.py  SingletonMeta.py  main.py
estructural/Adapter/: Adaptee.py  Adapter.py  Target.py  main.py
estructural/Bridge/: Abstraction.py  ConcreteImplementationA.py  ConcreteImplementationB.py  ExtendedAbstraction.py  Implementation.py  main.py
estructural/Decorator/: Component.py  ConcreteComponent.py  ConcreteDecoratorA.py  ConcreteDecoratorB.py  Decorator.py  main.py
estructural/Facade/: Facade.py  Subsystem1.py  Subsystem2.py  main.py
