[tool.poetry]
name = "Design Patterns"
version = "0.1.0"
description = ""
authors = ["Paulo Italo <pauloitalo@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.10.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
